--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -9,7 +9,7 @@ version = "3.7.4"
 # This value is automatically set based on your current `ThisBuild / scalaVersion` setting.
 # `scala212source3`/`scala213source3` will be set if `scalaVersion` is set to any of those versions
 #  and `-Xsource:3` option is present under `ThisBuild / scalacOptions`.
-runner.dialect = scala212
+runner.dialect = scala3
 
 # Number of maximum characters in a column
 maxColumn = 120
@@ -26,7 +26,7 @@ newlines.topLevelStatementBlankLines = [
   {
     blanks = 1,
     minBreaks = 0,
-    regex = "^(?!((Term\.Apply)|(Defn\.Object)))"
+    regex = "^(?!((Term\\.Apply)|(Defn\\.Object)))"
   }
 ]
 
