--- a/.gitignore
+++ b/.gitignore
@@ -124,7 +124,7 @@ hs_err_pid*
 ### Gradle ###
 .gradle
 **/build/
-!src/**/build/
+!app/src/**/build/
 
 # Ignore Gradle GUI config
 gradle-app.setting
