--- a/app/.scalafmt.conf
+++ b/app/.scalafmt.conf
@@ -11,5 +11,6 @@ newlines.source = fold
 optIn.configStyleArguments = false
 danglingParentheses.preset = true
 rewrite.rules = [RedundantBraces, RedundantParens, SortImports, PreferCurlyFors]
+rewrite.scala3.removeOptionalBraces = yes
 project.git = true
 runner.dialect = scala3
