--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,13 +7,12 @@ scalafx-version = "21.0.0-R32"
 logback-version = "1.2.10"
 scala-logging-version = "3.9.4"
 junit-version = "4.13.2"
+tuprolog-version = "4.1.1"
 scoverage-plugin-version = "8.1"
 scalafix-plugin-version = "0.2.2"
 javafx-plugin-version = "0.0.13"
 circe-yaml-version = "1.15.0"
 circe-generic-version = "0.14.9"
-tuprolog-version = "1.0.4"
-kotlin-version = "1.8.10"
 
 [libraries]
 scala-logging = { module = "com.typesafe.scala-logging:scala-logging_3", version.ref = "scala-logging-version" }
@@ -25,23 +24,10 @@ scala-library = { module = "org.scala-lang:scala3-library_3", version.ref = "sca
 junit = { module = "junit:junit", version.ref = "junit-version" }
 scalatest-plusjunit = { module = "org.scalatestplus:junit-4-13_3", version.ref = "scalatest-plusjunit-version" }
 circe-yaml = { module = "io.circe:circe-yaml_3", version.ref = "circe-yaml-version" }
+tuprolog = { module = "it.unibo.alice.tuprolog:2p-core", version.ref = "tuprolog-version" }
 circe-generic = { module = "io.circe:circe-generic_3", version.ref = "circe-generic-version" }
-tuprolog-core = { module = "it.unibo.tuprolog:core-jvm", version.ref = "tuprolog-version" }
-tuprolog-unify = { module = "it.unibo.tuprolog:unify-jvm", version.ref = "tuprolog-version" }
-tuprolog-theory = { module = "it.unibo.tuprolog:theory-jvm", version.ref = "tuprolog-version" }
-tuprolog-solve = { module = "it.unibo.tuprolog:solve-jvm", version.ref = "tuprolog-version" }
-tuprolog-solve-classic = { module = "it.unibo.tuprolog:solve-classic-jvm", version.ref = "tuprolog-version" }
-tuprolog-parser-core = { module = "it.unibo.tuprolog:parser-core-jvm", version.ref = "tuprolog-version" }
-tuprolog-parser-theory = { module = "it.unibo.tuprolog:parser-theory-jvm", version.ref = "tuprolog-version" }
-tuprolog-dsl-core = { module = "it.unibo.tuprolog:dsl-core-jvm", version.ref = "tuprolog-version" }
-tuprolog-dsl-unify = { module = "it.unibo.tuprolog:dsl-unify-jvm", version.ref = "tuprolog-version" }
-tuprolog-dsl-theory = { module = "it.unibo.tuprolog:dsl-theory-jvm", version.ref = "tuprolog-version" }
-tuprolog-dsl-solve = { module = "it.unibo.tuprolog:dsl-solve-jvm", version.ref = "tuprolog-version" }
-kotlin-bom = { module = "org.jetbrains.kotlin:kotlin-bom", version.ref = "kotlin-version" }
-kotlin-stdlib-jvm = { module = "org.jetbrains.kotlin:kotlin-stdlib-jdk8", version.ref = "kotlin-version" }
 
 [plugins]
 javafx = { id = "org.openjfx.javafxplugin", version.ref = "javafx-plugin-version" }
 scalafix = { id = "io.github.cosmicsilence.scalafix", version.ref = "scalafix-plugin-version" }
 scoverage = { id = "org.scoverage", version.ref = "scoverage-plugin-version" }
-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin-version" }
