build: update scalac options

--- a/app/.scalafix.conf
+++ b/app/.scalafix.conf
@@ -25,7 +25,7 @@ DisableSyntax {
     noAsInstanceOf = true
     noIsInstanceOf = true
     noXml = true
-    noDefaultArgs = true
+    noDefaultArgs = false
     noFinalVal = true
     noFinalize = true
     noValPatterns = true
@@ -33,7 +33,7 @@ DisableSyntax {
 }
 
 OrganizeImports {
-    removeUnused = false
+    removeUnused = true
     blankLines = Auto
     groups = [
         "re:javax?\\."
