chore: update scalafix config

--- a/app/.scalafix.conf
+++ b/app/.scalafix.conf
@@ -29,7 +29,7 @@ DisableSyntax {
     noFinalVal = true
     noFinalize = true
     noValPatterns = true
-    noUniversalEquality = true
+    noUniversalEquality = false
 }
 
 OrganizeImports {
