--- a/app/src/main/resources/cards.yaml
+++ b/app/src/main/resources/cards.yaml
@@ -1,93 +1,91 @@
 cardSets:
-  - title: "Esplosione"
+  - title: "Explosion"
     typeName: "Fire"
-    description: "Scegli una gemma fuoco esistente e sostituiscila
-     con un segnalino tagliafuoco. Metti gemme di fuoco sugli spazi circostanti."
+    description: "Choose an existing fire token and replace it 
+    with a firebreak token. Place fire tokens on the surrounding spaces."
     effectCode: 0
     amount: 1
-  - title: "Vampata"
+  - title: "Flare Up"
     typeName: "Fire"
-    description: "Piazza fino a tre gemme di fuoco adiacenti e allineate. 
-    Almeno una di esse deve toccare ortogonalmente una gemma fuoco preesistente."
+    description: "Place up to three adjacent and aligned fire tokens. 
+    At least one of them must touch an existing fire token orthogonally."
     effectCode: 1
     amount: 0
-  - title: "Albero morto che brucia"
+  - title: "Burning Snag"
     typeName: "Fire"
-    description: "Piazza fino a quattro gemme di fuoco a forma di quadrato.
-    Almeno una di esse deve toccare ortogonalmente una gemma fuoco preesistente."
+    description: "Place up to four fire tokens in the shape of a square. 
+    At least one of them must touch an existing fire token orthogonally."
     effectCode: 2
     amount: 1
-#  - title: "Tizzone"
+#  - title: "Ember"
 #    typeName: "Fire"
-#    description: "Sposta una gemma di fuoco sul tabellone in un qualunque spazio
-#    adiacente ortogonalmente ad un'altra gemma di fuoco. Non puoi muovere una
-#    gemma di fuoco che si trovi in una delle aree delle torri antincendio."
+#    description: "Move a fire token on the board to any space adjacent to
+#     another fire token orthogonally. You cannot move a fire token that is
+#     in one of the fire tower areas."
 #    effectCode: 3
 #    amount: 03
-  - title: "Nord"
+  - title: "North"
     typeName: "Wind"
-    description: "Cambia la direzione del vento verso Nord. OPPURE
-     Tira il dado per scegliere una nuova direzione del vento. OPPURE
-     Metti una gemma di fuoco a Nord di un'altra gemma di fuoco."
+    description: "Change the wind direction to North. 
+    OR Roll the die to choose a new wind direction. 
+    OR Place a fire token to the North of another fire token."
     effectCode: 4
     amount: 1
-  - title: "Sud"
+  - title: "South"
     typeName: "Wind"
-    description: "Cambia la direzione del vento verso Sud. OPPURE
-     Tira il dado per scegliere una nuova direzione del vento. OPPURE
-     Metti una gemma di fuoco a Sud di un'altra gemma di fuoco."
+    description: "Change the wind direction to South. 
+    OR Roll the die to choose a new wind direction. 
+    OR Place a fire token to the South of another fire token."
     effectCode: 5
     amount: 0
-  - title: "Est"
+  - title: "East"
     typeName: "Wind"
-    description: "Cambia la direzione del vento verso Est. OPPURE
-     Tira il dado per scegliere una nuova direzione del vento. OPPURE
-     Metti una gemma di fuoco a Est di un'altra gemma di fuoco."
+    description: "Change the wind direction to East. 
+    OR Roll the die to choose a new wind direction. 
+    OR Place a fire token to the East of another fire token."
     effectCode: 6
     amount: 1
-  - title: "Ovest"
+  - title: "West"
     typeName: "Wind"
-    description: "Cambia la direzione del vento verso Ovest. OPPURE
-     Tira il dado per scegliere una nuova direzione del vento. OPPURE
-     Metti una gemma di fuoco a Ovest di un'altra gemma di fuoco."
+    description: "Change the wind direction to West. 
+    OR Roll the die to choose a new wind direction. 
+    OR Place a fire token to the West of another fire token."
     effectCode: 7
     amount: 0
-  - title: "Linea di bulldozer"
+  - title: "Dozer Line"
     typeName: "Firebreak"
-    description: "Piazza due segnalini tagliafuoco adiacenti sul tabellone."
+    description: "Place two adjacent firebreak tokens on the board."
     effectCode: 8
     amount: 0
-  - title: "Linea provvisoria"
+  - title: "Scratch Line"
     typeName: "Firebreak"
-    description: "Piazza due segnalini tagliafuoco sul tabellone, con uno 
-    spazio di distanza tra loro."
+    description: "Place two firebreak tokens on the board, with one space of distance between them."
     effectCode: 9
     amount: 0
-  - title: "Ri/Deforesta"
+  - title: "De/Reforest"
     typeName: "Firebreak"
-    description: "Aggiungi un segnalino tagliafuoco sul tabellone. OPPURE
-    Rimuovi un segnalino tagliafuoco dal tabellone."
+    description: "Add a firebreak token on the board. OR Remove a firebreak token from the board."
     effectCode: 10
     amount: 0
-  - title: "Vigile del fuoco paracadutista"
+  - title: "Smokejumper"
     typeName: "Water"
-    description: "Scegli una gemma fuoco sul tabellone e rimuovi le gemme di fuoco
-    circostanti. La gemma di fuoco nel centro deve rimanere sul tabellone."
+    description: "Choose a fire token on the board and remove the surrounding fire tokens.
+     The fire token in the center must remain on the board."
     effectCode: 11
-    amount: 0
-  - title: "Bombardamento d'acqua"
+    amount: 3
+  - title: "Air Drop"
     typeName: "Water"
-    description: "Rimuovi fino a tre gemme di fuoco adiacenti e allineate sul tabellone."
+    description: "Remove up to three adjacent and aligned fire tokens from the board."
     effectCode: 12
-    amount: 0
-  - title: "Autopompa"
+    amount: 1
+  - title: "Fire Engine"
     typeName: "Water"
-    description: "Rimuovi fino a quattro gemme fuoco che formano un quadrato sul tabellone."
+    description: "Remove up to four fire tokens that form a square on the board."
     effectCode: 13
     amount: 0
-  - title: "Secchio"
+  - title: "Bucket"
     typeName: "Water"
-    description: "Rimuovi fino a tre gemme di fuoco adiacenti e allineate sul tabellone.
-    Almeno una di esse deve trovarsi nell'area della tua torre antincendio."
+    description: "Remove up to three adjacent and aligned fire tokens from the board. 
+    At least one of them must be in the area of your fire tower."
     effectCode: 14
     amount: 1
