--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,16 +1,41 @@
 version = "3.7.4"
+version = 3.7.0
+
 maxColumn = 100
-docstrings.style = "SpaceAsterisk"
-docstrings.wrap = yes
-docstrings.oneline = fold
-align.preset = some
-align.multiline = true
+
+align = more
+
+# Control how ScalaDoc and other docstrings are formatted
+docstrings = ScalaDoc
+
+# Blank lines before package declarations
+newlines.alwaysBeforeTopLevelStatements = true
+
+# Blank lines around imports
+newlines.sometimesBeforeColonInMethodReturnType = false
+
+# Optional: Configure vertical alignment of blocks and multi-line expressions
 align.openParenCallSite = false
 align.openParenDefnSite = false
-newlines.source = fold
-optIn.configStyleArguments = false
-danglingParentheses.preset = true
-rewrite.rules = [RedundantBraces, RedundantParens, SortImports, PreferCurlyFors]
-rewrite.scala3.removeOptionalBraces = yes
-project.git = true
-runner.dialect = scala3
+align.tokens = ["%", "%%", "=>", "<-", "->", "=", "==", "==="]
+
+# Wrapping control
+danglingParentheses = true
+
+# Control how multi-line formatting is applied
+rewrite.rules = [
+  SortImports,          # Sorts imports alphabetically
+  RedundantBraces,      # Removes unnecessary braces
+  RedundantParens,      # Removes unnecessary parentheses
+  AvoidInfix,           # Converts infix operators to dot notation (e.g., `a + b` to `a.+(b)`)
+  SortModifiers,        # Orders modifiers (e.g., `private` before `final`)
+]
+
+# Specify if redundant braces in string interpolation should be removed
+rewrite.redundantBraces.stringInterpolation = true
+
+spaces.inImportCurlyBraces = true
+spaces.afterKeywordBeforeParen = true
+
+# Specific options for import management
+importSelectors = singleLine
