build: update scalafix and compiler options

--- a/.scalafix.conf
+++ b/.scalafix.conf
@@ -1,47 +1,74 @@
+# scalafix.conf
+
+# Define the version of Scalafix rules being used
+version = 0.10.4
+
+# Define rules to run automatically
 rules = [
-  DisableSyntax,
-  NoAutoTupling,
-  NoValInForComprehension,
-  RedundantSyntax,
-  OrganizeImports,
-  LeakingImplicitClassVal
+  RemoveUnused,              # Removes unused imports, variables, etc.
+  DisableSyntax,             # Disables specific syntax (like var or null)
+  ProcedureSyntax,           # Enforces explicit return types for methods
+  ExplicitResultTypes,       # Requires explicit return types for methods
+  NoAutoTupling,             # Prevents automatic tupling in multi-arg functions
+  NoValInForComprehension,   # Prevents val definitions in for-comprehensions
+  LeakingImplicitClassVal,   # Prevents leaking implicit class fields
+  RedundantSyntax,           # Removes redundant syntactic elements
+  OrganizeImports            # Organizes and removes unused imports
 ]
 
+# ExplicitResultTypes: Add explicit return types for public, protected, and private methods
 ExplicitResultTypes {
   memberVisibility = [
     Public,
     Protected,
     Private
-  ],
+  ]
   fatalWarnings = false
 }
 
+# Disable specific syntax features
 DisableSyntax {
-    noVars = false
-    noThrows = true
-    noNulls = false
-    noReturns = true
-    noWhileLoops = true
-    noAsInstanceOf = true
-    noIsInstanceOf = true
-    noXml = true
-    noDefaultArgs = false
-    noFinalVal = true
-    noFinalize = true
-    noValPatterns = true
-    noUniversalEquality = false
+  noVars = false               # Allow use of vars (change to true to disallow)
+  noThrows = true              # Disallow the throw keyword
+  noNulls = false              # Allow use of nulls (change to true to disallow)
+  noReturns = true             # Disallow the return keyword
+  noWhileLoops = true          # Disallow while loops
+  noAsInstanceOf = true        # Disallow asInstanceOf usage
+  noIsInstanceOf = true        # Disallow isInstanceOf usage
+  noXml = true                 # Disallow use of XML literals
+  noDefaultArgs = false        # Allow default arguments (change to true to disallow)
+  noFinalVal = true            # Disallow final val declarations
+  noFinalize = true            # Disallow overriding finalize
+  noValPatterns = true         # Disallow pattern matching on val
+  noUniversalEquality = false  # Allow universal equality (change to true to disallow)
 }
 
+# Remove unused imports, variables, and pattern vars
+RemoveUnused.imports = true
+RemoveUnused.locals = true
+RemoveUnused.patvars = true
+
+# Organize imports based on specified rules
 OrganizeImports {
-    removeUnused = true
-    blankLines = Auto
-    groups = [
-        "re:javax?\\."
-        "scala."
-        "re:^(?!io\\.github\\.cakelier)\\."
-        "io.github.cakelier"
-    ]
-    groupedImports = Explode
-    importSelectorsOrder = SymbolsFirst
-    importsOrder = SymbolsFirst
+  removeUnused = true           # Automatically remove unused imports
+  blankLines = Auto             # Automatically insert blank lines between groups
+  groups = [                    # Define custom import groups
+    "re:javax?\\.",
+    "scala.",
+    "re:^(?!io\\.github\\.cakelier)\\.",
+    "io.github.cakelier"
+  ]
+  groupedImports = Explode       # Explode grouped imports into separate lines
+  importSelectorsOrder = SymbolsFirst # Sort import selectors with symbols first
+  importsOrder = SymbolsFirst    # Sort imports with symbols first
+}
+
+# Linting and rewrite settings
+ProcedureSyntax.methodWithExplicitReturnType = true
+
+# Additional checks and rules
+NoValInForComprehension.allowInnerScope = false
+LeakingImplicitClassVal.enabled = true
+Lint {
+  NoAutoTupling.enabled = true
 }
