chore: update scalafmt config

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,15 +1,12 @@
 version = "3.7.4"
-version = 3.7.0
 
 maxColumn = 100
 
 align = more
 
-# Control how ScalaDoc and other docstrings are formatted
-docstrings = ScalaDoc
-
-# Blank lines before package declarations
-newlines.alwaysBeforeTopLevelStatements = true
+project.git = true
+runner.dialect = scala3
+rewrite.scala3.removeOptionalBraces = yes
 
 # Blank lines around imports
 newlines.sometimesBeforeColonInMethodReturnType = false
@@ -20,7 +17,7 @@ align.openParenDefnSite = false
 align.tokens = ["%", "%%", "=>", "<-", "->", "=", "==", "==="]
 
 # Wrapping control
-danglingParentheses = true
+danglingParentheses.preset = true
 
 # Control how multi-line formatting is applied
 rewrite.rules = [
