chore: update scalafmt config

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -5,8 +5,7 @@ maxColumn = 100
 align = more
 
 project.git = true
-runner.dialect = scala3
-rewrite.scala3.removeOptionalBraces = yes
+runner.dialect = dotty
 
 # Blank lines around imports
 newlines.sometimesBeforeColonInMethodReturnType = false
@@ -15,9 +14,6 @@ newlines.sometimesBeforeColonInMethodReturnType = false
 align.openParenCallSite = false
 align.openParenDefnSite = false
 align.tokens = ["%", "%%", "=>", "<-", "->", "=", "==", "==="]
-
-# Wrapping control
-danglingParentheses.preset = true
 
 # Control how multi-line formatting is applied
 rewrite.rules = [
