--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -5,7 +5,7 @@ maxColumn = 100
 align = more
 
 project.git = true
-runner.dialect = dotty
+runner.dialect = scala3
 
 # Blank lines around imports
 newlines.sometimesBeforeColonInMethodReturnType = false
