--- a/.github/workflows/scala-steward.yml
+++ b/.github/workflows/scala-steward.yml
@@ -14,4 +14,5 @@ jobs:
       - name: Launch Scala Steward
         uses: scala-steward-org/scala-steward-action@v2.16.0
         with:
+          github-repository: Fight-Fire-With-Scala/Scala-Fire-Tower
           github-token: ${{ secrets.REPO_GH_TOKEN }}
