docs: update path of report generation

--- a/src/main/asciidoc/Makefile
+++ b/src/main/asciidoc/Makefile
@@ -5,7 +5,7 @@ DOCS       := cldoc doc
 doc: ./report.adoc
 	asciidoctor-pdf -r asciidoctor-diagram ./report.adoc \
  -a pdf-themesdir=. -a pdf-theme=report \
- -a pdf-fontsdir="fonts/FiraCode;GEM_FONTS_DIR" -o docs/report.pdf
+ -a pdf-fontsdir="fonts/FiraCode;GEM_FONTS_DIR" -o assets/docs/report.pdf
 
 cldoc:
 	rm -f ./*.pdf ./.asciidoc/*
